--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "https://ian-sankaka.github.io/React-App",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -40,3 +43,4 @@
     "@babel/core": "^7.16.0"
   }
 }
+
