--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -39,8 +40,9 @@
     ]
   },
   "devDependencies": {
+    "react-router-dom": "^5.2.0",
+    "@babel/core": "^7.16.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/core": "^7.16.0"
+    "gh-pages": "^6.1.1"
   }
 }
-
